--- a/Zadanie-1.html
+++ b/Zadanie-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Homework</title>
 </head>
 <body>
 
@@ -29,5 +29,6 @@
         let b = "108";
         alert(a+b);
     </script>
+    <p></p>
 </body>
 </html>
